--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: centerProjectTemplate
 Title: 'packagePages' Template for National Center for the Improvement of Educational Assessment (NCIEA) projects
-Version: 0.0-1.0
+Version: 0.0-2.0
 Authors@R: c(
     person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("cre", "aut")),
     person(given=c("Adam", "R."), family="Van Iwaarden", email="avaniwaarden@gmail.com", role="aut")
   )
-Description: This is a private template for NCIEA R projects.
+Description: This is a GitHub Pages template for NCIEA GitHub projects.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
